--- a/package.json
+++ b/package.json
@@ -7,18 +7,29 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "check": "node scripts/check.mjs",
+    "green": "node scripts/green.mjs",
+    "publish": "node scripts/publish.mjs",
+    "release": "node scripts/release.mjs",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "vue": "^3.2.37",
-    "@tauri-apps/api": "^1.0.2"
+    "@tauri-apps/api": "^1.0.2",
+    "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@actions/github": "^5.0.3",
+    "@tauri-apps/cli": "^1.0.5",
     "@types/node": "^18.7.10",
     "@vitejs/plugin-vue": "^3.0.1",
+    "adm-zip": "^0.5.9",
+    "fs-extra": "^10.1.0",
+    "module": "^1.2.5",
+    "node-fetch": "^3.2.10",
     "typescript": "^4.6.4",
     "vite": "^3.0.2",
     "vue-tsc": "^0.40.0",
-    "@tauri-apps/cli": "^1.0.5"
+    "zlib": "^1.0.5"
   }
 }
