--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fs-extra": "^10.1.0",
     "module": "^1.2.5",
     "node-fetch": "^3.2.10",
+    "husky": "^7.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.2",
     "vue-tsc": "^0.40.0",
