--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "check": "node scripts/check.mjs",
     "green": "node scripts/green.mjs",
     "publish": "node scripts/publish.mjs",
-    "release": "node scripts/release.mjs",
-    "prepare": "husky install"
+    "release": "node scripts/release.mjs"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.0.2",
