--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,6 +36,10 @@ port_scanner = "0.1.5"
 futures-util = "0.3.14"
 indicatif = "0.17.0"
 tempdir = "0.3.7"
+whoami = "1.2.2"
+uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
+base64 = "0.13.0"
+run_shell = "0.1.13"
 
 [features]
 # by default Tauri runs in production mode
