--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
           tagName: v__VERSION__
-          releaseName: 'Clash Verge v__VERSION__'
+          releaseName: 'Write App v__VERSION__'
           releaseBody: 'More new features are now supported.'
           releaseDraft: false
           prerelease: true
