--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "element-plus": "^2.2.16",
     "marked": "^4.1.0",
     "pinia": "^2.0.22",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
     "@actions/github": "^5.0.3",
     "@tauri-apps/cli": "^1.0.5",
+    "@types/marked": "^4.0.7",
     "@types/node": "^18.7.10",
     "@vitejs/plugin-vue": "^3.0.1",
     "adm-zip": "^0.5.9",
@@ -31,9 +33,13 @@
     "husky": "^7.0.0",
     "module": "^1.2.5",
     "node-fetch": "^3.2.10",
+    "sass": "^1.54.9",
     "typescript": "^4.6.4",
+    "unocss": "^0.45.21",
+    "unplugin-vue-components": "^0.22.7",
     "vconsole": "^3.14.6",
     "vite": "^3.0.2",
+    "vue-router": "^4.1.5",
     "vue-tsc": "^0.40.0",
     "zlib": "^1.0.5"
   }
