--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,6 +8,12 @@ repository = ""
 edition = "2021"
 rust-version = "1.57"
 
+[workspace]
+members = [
+  "plugins/tauri-plugin-updater",
+]
+
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
@@ -39,6 +45,7 @@ tempdir = "0.3.7"
 whoami = "1.2.2"
 uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
 base64 = "0.13.0"
+tauri-plugin-updater = { path = "plugins/tauri-plugin-updater" }
 
 [features]
 # by default Tauri runs in production mode
@@ -47,3 +54,4 @@ default = [ "custom-protocol" ]
 # this feature is used used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
 custom-protocol = [ "tauri/custom-protocol" ]
+write-dev = []
