--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -45,6 +45,7 @@ tempdir = "0.3.7"
 whoami = "1.2.2"
 uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
 base64 = "0.13.0"
+url = "2.3.1"
 tauri-plugin-updater = { path = "plugins/tauri-plugin-updater" }
 
 [features]
