--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-plus": "^2.2.16",
     "marked": "^4.1.0",
     "pinia": "^2.0.22",
+    "regulex": "^0.0.5",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2"
   },
